<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#ffffff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="#ffffff"
	    
	>
	    
	    <TextView
	        android:id="@+id/tvTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/app_name"
	        android:layout_marginBottom="20dip"
	        tools:context=".Main" />
	    
	    
	    <Button
		        android:id="@+id/btFile"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text = "@string/download_file"
		        android:layout_gravity="center"
		    />
	     
	    <Button
		        android:id="@+id/btTest"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text = "@string/button_test"
		        android:layout_gravity="center"
		    />
	    
	     <Button
		        android:id="@+id/btTimerTask"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text = "@string/button_timertask"
		        android:layout_gravity="center"
		    />
	     
	      <Button
		        android:id="@+id/btThread"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text = "@string/button_thread"
		        android:layout_gravity="center"
		    />
	      
	      <Button
		        android:id="@+id/btThreadHandler"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text = "@string/button_thread_handler"
		        android:layout_gravity="center"
		    />
	    	    
	</LinearLayout>

	 <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/license"
        android:textColor="#000000"
        android:textSize="10dip"
        android:layout_alignParentBottom="true"        
	/>    

</RelativeLayout>
